force-app/main/default/objects/Customer_Agreement__c/Customer_Agreement__c.object-meta.xml
<CustomObject>
    <description>Deprecated Object: This object was used to store the customer agreements before CLM go live. All the active Customer Agreements are migrated to Apttus OOB Agreements Object as on CLM go live date.</description>
    <label>Customer Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Agreements - DEPRECATED</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>