force-app/main/default/objects/Customer_Agreement__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <description>Agreement Number</description>
    <externalId>true</externalId>
    <label>Agreement Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>