force-app/main/default/objects/Customer_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Agreement Type</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Certificate Of Authorization</fullName>
            </value>
            <value>
                <fullName>Channel Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Due Diligence Questionnaire</fullName>
            </value>
            <value>
                <fullName>Standing Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>