force-app/main/default/objects/Customer_Agreement__c/fields/GoldenGate_Cons__c.field-meta.xml
<CustomField>
    <fullName>GoldenGate_Cons__c</fullName>
    <description>GoldenGate Cons</description>
    <label>GoldenGate Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>