force-app/main/default/objects/Customer_Agreement__c/fields/Has_Agreement_Expired__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreement_Expired__c</fullName>
    <description>Has Agreement Expired</description>
    <formula>End_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Agreement Expired</label>
    <type>Checkbox</type>
</CustomField>