force-app/main/default/objects/Customer_Agreement__c/fields/Maximum_Premium__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Premium__c</fullName>
    <description>Maximum Premium</description>
    <label>Maximum Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above U.S. List Price</fullName>
            </value>
            <value>
                <fullName>Above EU 302 USD List Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>