force-app/main/default/objects/Customer_Agreement__c/fields/MiSeq_Cons__c.field-meta.xml
<CustomField>
    <fullName>MiSeq_Cons__c</fullName>
    <description>MiSeq Cons</description>
    <label>MiSeq Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>