force-app/main/default/objects/Customer_Agreement__c/fields/MP_Product_Group_4_Premium__c.field-meta.xml
<CustomField>
    <fullName>MP_Product_Group_4_Premium__c</fullName>
    <description>MP Product Group 4 Premium %</description>
    <label>MP Product Group 4 Premium %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>