force-app/main/default/objects/Customer_Agreement__c/fields/NextSeq_Cons__c.field-meta.xml
<CustomField>
    <fullName>NextSeq_Cons__c</fullName>
    <description>NextSeq Cons</description>
    <label>NextSeq Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>