force-app/main/default/objects/Customer_Agreement__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type</description>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>FastTrack Services</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>TG Consumables</fullName>
            </value>
            <value>
                <fullName>TruSight Content Sets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>