force-app/main/default/objects/Customer_Agreement__c/fields/Sample_Preparation_Cons__c.field-meta.xml
<CustomField>
    <fullName>Sample_Preparation_Cons__c</fullName>
    <description>Sample Preparation Cons</description>
    <label>Sample Preparation Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>