force-app/main/default/objects/Customer_Agreement__c/fields/SEQCO2_Cons__c.field-meta.xml
<CustomField>
    <fullName>SEQCO2_Cons__c</fullName>
    <description>SEQCO2 Cons</description>
    <label>SEQCO2 Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>