force-app/main/default/objects/Customer_Agreement__c/fields/TG_HiSeq_3000_4000_Cons__c.field-meta.xml
<CustomField>
    <fullName>TG_HiSeq_3000_4000_Cons__c</fullName>
    <description>TG HiSeq 3000/4000 Cons</description>
    <label>TG HiSeq 3000/4000 Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>