force-app/main/default/objects/Customer_Agreement__c/fields/TG_Miscellaneous_Cons__c.field-meta.xml
<CustomField>
    <fullName>TG_Miscellaneous_Cons__c</fullName>
    <description>TG Miscellaneous Cons</description>
    <label>TG Miscellaneous Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>