force-app/main/default/objects/Customer_Agreement__c/fields/X24Sure_Cons__c.field-meta.xml
<CustomField>
    <fullName>X24Sure_Cons__c</fullName>
    <description>24Sure Cons</description>
    <label>24Sure Cons</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>