force-app/main/default/objects/Customer_Agreement__c/recordTypes/Channel_Partner_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Agreement</fullName>
    <active>true</active>
    <label>Channel Partner Agreement</label>
</RecordType>