force-app/main/default/objects/Customer_Agreement__c/recordTypes/Standing_Discount.recordType-meta.xml
<RecordType>
    <fullName>Standing_Discount</fullName>
    <active>true</active>
    <label>Standing Discount</label>
</RecordType>