force-app/main/default/objects/Customer_Agreement__c/validationRules/CheckUniqueCustomerAgreement.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckUniqueCustomerAgreement</fullName>
    <active>false</active>
    <description>Prevents user from creating duplicate Customer Agreement Records.</description>
    <errorConditionFormula>AND ( 
    LOWER ( VLOOKUP ( $ObjectType.Customer_Agreement__c.Fields.Name, $ObjectType.Customer_Agreement__c.Fields.Name, Name )) = LOWER(Name),
    VLOOKUP( $ObjectType.Customer_Agreement__c.Fields.Id, $ObjectType.Customer_Agreement__c.Fields.Name, Name ) &lt;&gt; Id
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>A customer agreement with that name already exists.</errorMessage>
</ValidationRule>