force-app/main/default/objects/Customer_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_To_Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>